@startuml

title __DECORATOR's Class Diagram__\n

  namespace vendingmachine.decorator {
    abstract class vendingmachine.decorator.Beverage {
        # name : String
        # price : int
        + Beverage()
        + Beverage()
        + getName()
        + getPrice()
        + setName()
        {abstract} # decorateBeverage()
        # setPrice()
    }
  }
  

  namespace vendingmachine.decorator {
    abstract class vendingmachine.decorator.BeverageDecorator {
        + BeverageDecorator()
        + decorateBeverage()
        {abstract} + getDecoratedName()
        {abstract} + getIncrementPrice()
    }
  }
  

  namespace vendingmachine.decorator {
    class vendingmachine.decorator.CaramelDecorator {
        + CaramelDecorator()
        + decorateBeverage()
        + decorateCaramel()
        + getDecoratedName()
        + getIncrementPrice()
    }
  }
  

  namespace vendingmachine.decorator {
    class vendingmachine.decorator.Coffee {
        + Coffee()
        + decorateBeverage()
    }
  }
  

  namespace vendingmachine.decorator {
    class vendingmachine.decorator.SugarDecorator {
        + SugarDecorator()
        + decorateBeverage()
        + decorateSugar()
        + getDecoratedName()
        + getIncrementPrice()
    }
  }
  

  namespace vendingmachine.decorator {
    class vendingmachine.decorator.Tea {
        + Tea()
        + decorateBeverage()
    }
  }
  

  namespace vendingmachine.decorator {
    class vendingmachine.decorator.VendingMachineDecoratorTest {
        {static} + main()
    }
  }
  

  vendingmachine.decorator.BeverageDecorator -up-|> vendingmachine.decorator.Beverage
  vendingmachine.decorator.BeverageDecorator o-- vendingmachine.decorator.Beverage : beverage
  vendingmachine.decorator.CaramelDecorator -up-|> vendingmachine.decorator.BeverageDecorator
  vendingmachine.decorator.Coffee -up-|> vendingmachine.decorator.Beverage
  vendingmachine.decorator.SugarDecorator -up-|> vendingmachine.decorator.BeverageDecorator
  vendingmachine.decorator.Tea -up-|> vendingmachine.decorator.Beverage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
